# prb3r_compliant_beam_analysis

./: .gitignore  README.md  pyproject.toml
.github/workflows/: deploy-prb3r-web-app.yml
results/csv/: prb3r_force_angle_sweep.csv  prb3r_vs_beam_phi90.csv  tip_locus_atlas_phi90.csv
results/csv/FEA_Results/: fea_comparison_summary.csv  fea_reference_cases.csv  fea_results_filled.csv  fea_summary_statistics.csv
results/csv/Final_Analytical/: analytical_validation_summary.csv  kappa1_diagnostic_note.md
results/csv/Run 2/: expected_error_validation.csv  prb3r_vs_beam_phi90.csv  tip_locus_atlas_phi90.csv
results/csv/Run 3/: basic_verification.csv  debug_kappa1_endpoint_and_sign.csv  expected_error_validation.csv  prb3r_force_angle_sweep.csv  stiffness_fit_error_comparison.csv  stiffness_fit_summary.csv  (+1 more)
scripts/: compare_fea_results.py  debug_kappa1_case.py  export_web_app_data.py  generate_all_figures.py  generate_final_analytical_outputs.py  generate_prb3r_comparison_plots.py  generate_tip_locus_atlas.py  reconstruct_stiffness_diagnostic.py  run_basic_verification.py  validate_against_expected_errors.py
src/: __init__.py  beam_theory.py  fea_plotting.py  fea_processing.py  plotting.py  prb3r_model.py  stiffness_reconstruction.py  validation_metrics.py
tests/: __init__.py  test_beam_theory.py  test_fea_processing.py  test_prb3r_model.py  test_stiffness_reconstruction.py
web_app/: index.html  package.json
web_app/scripts/: check-data.mjs
web_app/src/: App.jsx  ThreePreview.jsx  data.js  geometry.js  presets.js  styles.css
(+4 files in other folders)
